# bunkerhill-sdk

./: .gitignore  README.md  package-lock.json  setup.py
bunkerhill/: base_model.py  bunkerhill_types.py  grpc_socket.py  model_runner.py  nnunet_wrapper.py  shared_file_utils.py
bunkerhill/examples/hippocampus/: Dockerfile  conftest.py  model.py  requirements.txt  test_model.py
bunkerhill/examples/monai/: Dockerfile  model.py  requirements.txt  test_model.py
bunkerhill/proto/: inference_pb2_grpc.py
bunkerhill/utils/: client_cli.py  nifti_to_modelrunner_input.py
client_sdk/javascript/: package-lock.json  package.json
client_sdk/javascript/src/: client.ts  exceptions.ts  interfaces.ts  sample.ts
client_sdk/python/: README.md  client.py  exceptions.py  pyproject.toml  sample.py
client_sdk/python/bunkerhill_inference_api/: client.py  django_jwt_client.py  exceptions.py  types.py
inference-api/inference_api_python_client/: README.md  client.py  django_jwt_client.py  exceptions.py  types.py
inference-api/inference_api_typescript_client/: tsconfig.json
inference-api/inference_api_typescript_client/src/: client.ts  djangoJwtClient.ts  django_jwt_client.ts  exceptions.ts  interfaces.ts  (+1 more)
inference-api/python-client/: README.md  client.py  django_jwt_client.py  exceptions.py  pyproject.toml  setup.py  types.py
inference-api/python_client/: __init__.py  client.py  django_jwt_client.py  exceptions.py  pyproject.toml  types.py
model-sdk/: README.md
model_server_sdk/: README.md
model_server_sdk/bunkerhill/: base_model.py  image_utils.py  nnunet_wrapper.py
(+10 files in other folders)
