[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bunkerhill-inference-api"
version = "0.0.1"
description = "Python client for Bunkerhill Inference API"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
authors = [
  {name = "Bunkerhill Health", email = "engineering@bunkerhillhealth.com"},
]
readme = "README.md"
python_requires = ">=3.9"

[project.dependencies]
aiohttp = ">=3.7.2"
asgiref = ">=3.6.0"
PyJWT = ">=2.7.0"
pytz = ">=2021.3"
retry = ">=0.9.2"

[project.urls]
"Homepage" = "https://github.com/bunkerhillhealth/bunkerhill-sdk/inference-api/python-client"

